impl/tests/errors/__snapshots__/test_indexing_non_array.ambr
# serializer version: 1
# name: test_indexing_non_array_assignment_output
  '''
  
  [31m[E11] Error:[0m  Expression needs to be of [38;5;201mArray[0m type to use indexing operations 
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:2:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m2 │[0m [38;5;155mx[0m[38;5;249m[[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m
   [38;5;240m  │[0m [38;5;155m┬[0m  
   [38;5;240m  │[0m [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m Type is [38;5;155mInt[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
# name: test_indexing_non_array_output
  '''
  
  [31m[E11] Error:[0m  Expression needs to be of [38;5;201mArray[0m type to use indexing operations 
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:2:7[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m2 │[0m [38;5;249mp[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m([0m[38;5;155mx[0m[38;5;249m[[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m)[0m
   [38;5;240m  │[0m       [38;5;155m┬[0m  
   [38;5;240m  │[0m       [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m Type is [38;5;155mInt[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
